2007-09-26  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* po/POTFILES.in: use UTF-8 encoding

	* configure.ac: Bump version to 0.2.0

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/sv.po: Added Swedish translation by
	  Daniel Nylander <info@danielnylander.se>

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/es.po: Added Spanish translation by
	  Stephen Denham <stephen.denham@gmail.com>

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/nl.po: Added Dutch translation by
	  Eddy Pronk <epronk@muftor.com>

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/pl.po: Added Polish translation by
	  Piotr Szotkowski <shot@hot.pl>

2007-06-07  Jürg Billeter  <j@bitron.ch>

	* po/cs.po: Updated Czech translation by
	  Pavel Chovancik <pchovancik@foxinus.cz>

2007-05-13  Jürg Billeter  <j@bitron.ch>

	* po/fr.po: Updated French translation by
	  Julien Valroff <julien@kirya.net>

2007-04-11  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/cs.po: Added Czech translation by
	  Pavel Chovancik <pchovancik@foxinus.cz>

2006-12-17  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-resize.glade, src/nautilus-image-rotate.glade: mark
	  additional labels as translatable
	* po/POTFILES.in: update list of translatable files
	* po/LINGUAS, po/ja.po: Added Japanese translation by
	  Kazutaka Harada <kazutaka802@yahoo.co.jp>
	
	* configure.ac: Bump version to 0.0.9

2006-12-07  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-rotator.c: Fix typo in assert macro.
	
	* configure.ac: Bump version to 0.0.8

2006-12-07  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-converter.c
	* src/nautilus-image-rotator.c
	* src/nautilus-image-rotator.h
	* src/nautilus-image-rotate.glade
	* src/Makefile.am
	
	Support image rotation.
	
	* configure.ac: Bump version to 0.0.7

2006-12-06  Jürg Billeter  <j@bitron.ch>

	* configure.ac: use new IT_PROG_INTLTOOL macro